2006-08-15  Radek Doulik  <rodo@novell.com>

	* makefile.mk: require gstreamer-plugins-base-0.10 and link with
	gst interfaces library

	* gstwindow.cxx: make it build

	* gstplayer.cxx: removed WINNT ifdefs (relict from time when I
	thought Cedric develops on win architecture)
	(gst_pipeline_bus_callback): added sync handler for setting
	xwindow id to to video sink
	(processSyncMessage): new metrhod, process message from sync
	handler
	(create): set playbin state to READY so that playback start is
	faster
	(createPlayerWindow): implemented, we pass xwindow id in 3rd
	argument

2006-08-04  Radek Doulik  <rodo@novell.com>

	* gstplayer.cxx (create): add bus watch, watch for EOS in
	processMessage method (called from watch callback)

2006-08-02  Radek Doulik  <rodo@novell.com>

	* gstplayer.cxx: test for mpPlaybin != NULL before using it,
	initialize it in constructor to NULL and also reset it to NULL
	after unrefing
	(getDuration): check for sucessful query and the right format
	(getMediaTime): ditto, 
	(setMediaTime): implemented

2006-08-01  Radek Doulik  <rodo@novell.com>

	* gstwindow.hxx: removed mpWndClass for now, so that the rest
	compiles

	* gstuno.cxx (component_getFactory): s/DirectX/GStreamer so that
	component is loaded

	* gstplayer.cxx (Player::Player): do not create gerror object, it
	is noit needed, free the error object only if created during
	initialization of gstremer
	(Player::create, start, stop): use g_main_loop only on windows
	(create): fixed ascURL declaration, added rtl namespace prefix
	(setMute): set mbMuted
	(setVolumeDB): convert avmedia volume to gstreamer volume, added
	missing NULL to the end of g_object_set call
	(getVolumeDB): convert gstreamer volume back to avmedia volume

	* gstplayer.hxx: keep g_main_loop only on win platform. make
	mnUnmutedVolume double, moved mbInitialized to the end to quiet
	compiler warning

	* gstcommon.hxx: removed wrong #include <rtl/ustring>
