@@ -1,3 +1,10 @@
+2006-08-16  Radek Doulik  <rodo@novell.com>
+
+	* gstplayer.cxx (create): set state to PAUSED so that we can query
+	duration ASAP
+	(processMessage): watch for state changed and query duration when
+	going to PAUSED state
+
 2006-08-15  Radek Doulik  <rodo@novell.com>
 
 	* makefile.mk: require gstreamer-plugins-base-0.10 and link with
